# ProtoType

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: core_object.h.98472CE296825248.idx  main.c.010952E39E0A1612.idx  typeobject.c.C9EE6916E9D80D76.idx  typeobject.h.5F77D1D23720A845.idx
objects/core/: core_object.h  typeobject.c  typeobject.h
objects/core/coreObjects/: arrobejct.c  arrobejct.h  arrobejct_alloc.c  arrobejct_alloc.h  ct_arrayobject.h  dims_alloc.h  helper.h  uintarrobejct.c  uintarrobejct.h
objects/core/coreObjects/mem/: array_mem.h
objects/core/tests/: main.c  typetest.c
runtime/: runtime_core.h
